{
  "version": 4,
  "terraform_version": "1.6.2",
  "serial": 532,
  "lineage": "61e6f7db-43d3-fcf2-d844-020e9a7b0295",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:331061725593:subnet/subnet-08e32f914ceb1a114",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "available_ip_address_count": 4091,
            "cidr_block": "10.0.128.0/20",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08e32f914ceb1a114",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "331061725593",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "CreatedBy": "utkarshs@sahaj.ai",
              "EventName": "test_ctf"
            },
            "vpc_id": "vpc-00fb712e07ccba978"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:331061725593:vpc/vpc-00fb712e07ccba978",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-093408acbc00f4a83",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-9eb562f5",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "defaut-vpc"
                ]
              }
            ],
            "id": "vpc-00fb712e07ccba978",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0375ac226c21b6aa0",
            "owner_id": "331061725593",
            "tags": {
              "CreatedBy": "utkarshs@sahaj.ai",
              "EventName": "test_ctf",
              "Name": "defaut-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f2e255ec956ade7f",
            "arn": "arn:aws:ec2:ap-south-1:331061725593:instance/i-04db4b5686a061daf",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "k8s_node_dnyaneshwarw",
            "id": "i-04db4b5686a061daf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.medium",
            "ipv6_address_count": 0,
            "key_name": "keypair_dnyaneshwarw",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 3,
                "http_tokens": "optional",
                "instance_metadata_tags": "enabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-044a272960656c820",
            "private_dns": "ip-10-0-133-38.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.133.38",
            "public_ip": "13.235.113.245",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09bb8de261c8c1add",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08e32f914ceb1a114",
            "tags": {
              "Name": "k8s_node_cap_dev_infra_dnyaneshwarw"
            },
            "tags_all": {
              "Name": "k8s_node_cap_dev_infra_dnyaneshwarw",
              "owner": "dnyaneshwarw",
              "purpose": "cap-dev-infra assignment"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-014d72ac64c43d7ef"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.node_instance_profile",
            "aws_iam_role.node_role",
            "aws_key_pair.key_pair",
            "aws_security_group.node_sg",
            "data.aws_ami.ubuntu-ami",
            "data.aws_iam_policy_document.instance_assume_role_policy",
            "data.aws_subnet.selected",
            "data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:331061725593:security-group/sg-014d72ac64c43d7ef",
            "description": "SG for k8s_node",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-014d72ac64c43d7ef",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "k8s_node_sg_dnyaneshwarw20231122130119268800000001",
            "name_prefix": "k8s_node_sg_dnyaneshwarw",
            "owner_id": "331061725593",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "owner": "dnyaneshwarw",
              "purpose": "cap-dev-infra assignment"
            },
            "timeouts": {
              "create": null,
              "delete": "10m"
            },
            "vpc_id": "vpc-00fb712e07ccba978"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_outgoing_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:331061725593:security-group-rule/sgr-0cbaabdc3dfc123d6",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0cbaabdc3dfc123d6",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-014d72ac64c43d7ef",
            "security_group_rule_id": "sgr-0cbaabdc3dfc123d6",
            "tags": null,
            "tags_all": {
              "owner": "dnyaneshwarw",
              "purpose": "cap-dev-infra assignment"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.node_sg",
            "data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_outgoing_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:331061725593:security-group-rule/sgr-05dea38328a123151",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": null,
            "id": "sgr-05dea38328a123151",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-014d72ac64c43d7ef",
            "security_group_rule_id": "sgr-05dea38328a123151",
            "tags": null,
            "tags_all": {
              "owner": "dnyaneshwarw",
              "purpose": "cap-dev-infra assignment"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.node_sg",
            "data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:331061725593:security-group-rule/sgr-09d621cc13a3927e9",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-09d621cc13a3927e9",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-014d72ac64c43d7ef",
            "security_group_rule_id": "sgr-09d621cc13a3927e9",
            "tags": null,
            "tags_all": {
              "owner": "dnyaneshwarw",
              "purpose": "cap-dev-infra assignment"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.node_sg",
            "data.aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}